/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package util;

option java_package = "com.google.apphosting.base.protos";
option cc_enable_arenas = true;

// Wire-format for a Status object
message StatusProto {
  // Numeric code drawn from the space specified below. Often, this is the
  // canonical error space, and code is drawn from codes.proto
  optional int32 code = 1;

  // The following are usually only present when code != 0
  optional string space = 2;    // Space to which this status belongs
  optional string message = 3;  // Detail message

  // The canonical error code (see codes.proto) that most closely
  // corresponds to this status. May be missing.
  optional int32 canonical_code = 6;

  reserved 4, 5;
}
